juiceshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juiceshop-service
spec:
  selector:
    app: juiceshop
  ports:
    - name: juiceshop-prot
      protocol: TCP
      port: 3000
      targetPort: 3000
