juiceshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juiceshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /juiceshop(/|$)(.*)
#          - path: /
            pathType: Prefix
            backend:
              service:
                name: juiceshop-service
                port:
                  number: 3000
